force-app/main/default/objects/Anticipated_Bid_Cycle_For_Major_Products__c/Anticipated_Bid_Cycle_For_Major_Products__c.object-meta.xml
<CustomObject>
    <label>Anticipated Bid Cycle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Anticipated Bid Cycle For Major Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anticipated Bid Cycle for Major Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>