force-app/main/default/objects/Anticipated_Bid_Cycle_For_Major_Products__c/fields/Deal_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Deal_Cycle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Cycle</label>
    <type>TextArea</type>
</CustomField>