force-app/main/default/objects/Anticipated_Bid_Cycle_For_Major_Products__c/fields/EBD__c.field-meta.xml
<CustomField>
    <fullName>EBD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EBD</label>
    <referenceTo>EBD__c</referenceTo>
    <relationshipLabel>Anticipated Bid Cycle for Major Products</relationshipLabel>
    <relationshipName>Anticipated_Bid_Cycle_for_Major_Products</relationshipName>
    <type>Lookup</type>
</CustomField>