force-app/main/default/objects/Anticipated_Bid_Cycle_For_Major_Products__c/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incumbent</label>
    <type>TextArea</type>
</CustomField>