force-app/main/default/objects/Anticipated_Bid_Cycle_For_Major_Products__c/fields/Red_Yellow_Green__c.field-meta.xml
<CustomField>
    <fullName>Red_Yellow_Green__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Red/Yellow/Green</label>
    <length>255</length>
    <type>Text</type>
</CustomField>